Fixed Page Stuck
On body and page by deleting a code and adding a background colour

--- a/blocks/body.css
+++ b/blocks/body.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   display: flex;
-  overflow: hidden;
+  background-color: #2a2c2f;
 }
 
 h1,
